# AskStefan

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  main.py  models.py
backend/app/rag/: chunker.py  embedder.py  generator.py  ingestion.py  loaders.py  retriever.py  vectorstore.py
backend/app/routes/: chat.py  health.py  ingest.py
backend/data/: about-me.md  projects.md  skills-detailed.md
backend/tests/: conftest.py  test_api.py  test_chunker.py  test_ingestion.py  test_loaders.py  test_retriever.py
backend/tests/fixtures/: sample_projects.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/: _headers
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: ChatPanel.jsx  ColdStartLoader.jsx  EmptyState.jsx  Header.jsx  InputBox.jsx  MessageBubble.jsx  SocialLinks.jsx  SourceCard.jsx  SourcePanel.jsx  SuggestedPrompts.jsx  TypingIndicator.jsx  WelcomeBanner.jsx
frontend/src/config/: prompts.js
frontend/src/hooks/: useChat.js
frontend/src/utils/: highlight.jsx
frontend/tests/: ColdStartLoader.test.jsx  MessageBubble.test.jsx  SourceCard.test.jsx  WelcomeBanner.test.jsx  useChat.test.js
