[project]
name = "askstefan-backend"
version = "1.0.0"
description = "RAG chatbot backend for AskStefan"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
target-version = ["py311"]
line-length = 99

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
